src/test/deca/syntax/valid/synt/UnaryExp.deca
// Description:
//    Programme pour tester UnaryMinus
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    int a=-50;
}
